force-app/main/default/objects/Office_Asset__c/Office_Asset__c.object-meta.xml
<CustomObject>
    <label>Office Asset</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Office Asset Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Office Assets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>