force-app/main/default/objects/Office_Asset__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <label>Brand</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sub_type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Lenovo</fullName>
            </value>
            <value>
                <fullName>Dell</fullName>
            </value>
            <value>
                <fullName>LG</fullName>
            </value>
            <value>
                <fullName>HP</fullName>
            </value>
            <value>
                <fullName>Samsung</fullName>
            </value>
            <value>
                <fullName>RICOH</fullName>
            </value>
            <value>
                <fullName>Kogan</fullName>
            </value>
            <value>
                <fullName>IKEA</fullName>
            </value>
            <value>
                <fullName>Officeworks</fullName>
            </value>
            <value>
                <fullName>Nikon</fullName>
            </value>
            <value>
                <fullName>Sunbeam</fullName>
            </value>
            <value>
                <fullName>Nespresso</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>