force-app/main/default/objects/Office_Asset__c/fields/Date_of_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Delivery__c</fullName>
    <label>Date of Delivery</label>
    <type>Date</type>
</CustomField>