force-app/main/default/objects/Office_Asset__c/fields/Disposal_Details__c.field-meta.xml
<CustomField>
    <fullName>Disposal_Details__c</fullName>
    <label>Disposal Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>