force-app/main/default/objects/Office_Asset__c/fields/Lease_Date__c.field-meta.xml
<CustomField>
    <fullName>Lease_Date__c</fullName>
    <label>Lease Date</label>
    <type>Date</type>
</CustomField>