force-app/main/default/objects/Office_Asset__c/fields/Maintenance_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Requirements__c</fullName>
    <label>Maintenance Requirements</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>