force-app/main/default/objects/Office_Asset__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <inlineHelpText>If applicable</inlineHelpText>
    <label>Model</label>
    <length>50</length>
    <type>Text</type>
</CustomField>