force-app/main/default/objects/Office_Asset__c/fields/Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Serial_Number__c</fullName>
    <inlineHelpText>If applicable</inlineHelpText>
    <label>Serial Number</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>