force-app/main/default/objects/Office_Asset__c/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site</label>
    <referenceTo>enrtcr__Site__c</referenceTo>
    <relationshipLabel>Office Assets</relationshipLabel>
    <relationshipName>Office_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>