force-app/main/default/objects/Office_Asset__c/fields/Sub_type__c.field-meta.xml
<CustomField>
    <fullName>Sub_type__c</fullName>
    <label>Sub-type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monitor</fullName>
            </value>
            <value>
                <fullName>Camera</fullName>
            </value>
            <value>
                <fullName>Printer</fullName>
            </value>
            <value>
                <fullName>Microwave</fullName>
            </value>
            <value>
                <fullName>TV</fullName>
            </value>
            <value>
                <fullName>Fridge</fullName>
            </value>
            <value>
                <fullName>Coffee machine</fullName>
            </value>
            <value>
                <fullName>Paper shredder</fullName>
            </value>
            <value>
                <fullName>Fax machine</fullName>
            </value>
            <value>
                <fullName>Laminator</fullName>
            </value>
            <value>
                <fullName>Vacuum</fullName>
            </value>
            <value>
                <fullName>Desk</fullName>
            </value>
            <value>
                <fullName>Chair</fullName>
            </value>
            <value>
                <fullName>Boardroom table</fullName>
            </value>
            <value>
                <fullName>Cabinet/locker</fullName>
            </value>
            <value>
                <fullName>Table</fullName>
            </value>
            <value>
                <fullName>Ottoman</fullName>
            </value>
            <value>
                <fullName>Sofa</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>