force-app/main/default/objects/Office_Asset__c/fields/Supplier__c.field-meta.xml
<CustomField>
    <fullName>Supplier__c</fullName>
    <label>Supplier</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sub_type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Lenovo</fullName>
            </value>
            <value>
                <fullName>HP</fullName>
            </value>
            <value>
                <fullName>LG</fullName>
            </value>
            <value>
                <fullName>Dell</fullName>
            </value>
            <value>
                <fullName>Ricoh</fullName>
            </value>
            <value>
                <fullName>Kogan</fullName>
            </value>
            <value>
                <fullName>Kmart</fullName>
            </value>
            <value>
                <fullName>APEX Furniture</fullName>
            </value>
            <value>
                <fullName>Temple and Webster</fullName>
            </value>
            <value>
                <fullName>Officeworks</fullName>
            </value>
            <value>
                <fullName>IKEA</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>