force-app/main/default/objects/Office_Asset__c/fields/Useful_Life__c.field-meta.xml
<CustomField>
    <fullName>Useful_Life__c</fullName>
    <label>Useful Life</label>
    <length>20</length>
    <type>Text</type>
</CustomField>