force-app/main/default/objects/Office_Asset__c/fields/Warranty_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Expiry__c</fullName>
    <inlineHelpText>in months or years</inlineHelpText>
    <label>Warranty Expiry</label>
    <length>20</length>
    <type>Text</type>
</CustomField>