force-app/main/default/objects/Office_Asset__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Site__c</columns>
    <columns>Type__c</columns>
    <columns>Sub_type__c</columns>
    <columns>Brand__c</columns>
    <columns>Quantity__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>