force-app/main/default/objects/Office_Asset__c/listViews/List_of_TV.listView-meta.xml
<ListView>
    <fullName>List_of_TV</fullName>
    <columns>NAME</columns>
    <columns>Brand__c</columns>
    <columns>Site__c</columns>
    <columns>State__c</columns>
    <columns>Quantity__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Electrical appliance</value>
    </filters>
    <filters>
        <field>Sub_type__c</field>
        <operation>equals</operation>
        <value>TV</value>
    </filters>
    <label>List of TV</label>
</ListView>